--- a/index.html
+++ b/index.html
@@ -128,12 +128,17 @@
             </div>
 
             <div class="containChat">
+              <div class="cpu">
 
+              </div>
+              <div class="user d-flex flex-column flex-wrap justify-content-start align-items-end">
+
+              </div>
             </div>
 
             <div class="userKeyboard d-flex flex-row justify-content-around align-items-center text-secondary">
               <i class="far fa-smile fa-2x"></i>
-              <input type="text" name="" value="" class="rounded" placeholder="Scrivi un messaggio">
+              <input type="text" name="" value="" class="rounded send" placeholder="Scrivi un messaggio">
               <i class="fas fa-microphone fa-2x"></i>
             </div>
 
@@ -141,6 +146,7 @@
         </div>
       </div>
     </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="script.js" charset="utf-8"></script>
   </body>
