--- a/index.html
+++ b/index.html
@@ -10,124 +10,176 @@
   <body>
 
     <div class="container">
-      <div class="row no-gutters">
-        <div class="col-lg-5 d-flex flex-column flex-wrap">
+      <div class="row no-gutters bg-white my-4">
+        <div class="col-lg-4 d-flex flex-column flex-wrap">
 
-          <div class="myProfile d-flex flex-row justify-content-between align-items-center text-secondary px-2">
-            <img src="https://cdn-static.dagospia.com/img/foto/09-2018/dr-dre-1062006_tn.jpg" class="rounded float-left rounded-circle">
-            <div class="symbols">
-              <i class="far fa-comment-alt mr-2"></i>
-              <i class="fas fa-smile"></i>
+          <div class="myProfile d-flex flex-row justify-content-between align-items-center text-secondary px-2 ">
+            <img src="https://www.nzherald.co.nz/resizer/ylJi7_iqesgCFMK4IU8HFc8XIE0=/360x384/filters:quality(70)/arc-anglerfish-syd-prod-nzme.s3.amazonaws.com/public/2RPYRLYQGFBN3PO4A6UBUUORWQ.jpg" class="rounded float-left rounded-circle">
+            <div class="symbols d-flex flex-row justify-content-end">
+              <i class="far fa-circle"></i>
+              <i class="fas fa-comment-alt"></i>
+              <i class="fas fa-ellipsis-v"></i>
             </div>
           </div>
 
           <div class="chat d-flex flex-column flex-wrap">
-            <div class="searchChat d-flex flex-row  align-items-center text-secondary border border-secondary">
-              <i class="fas fa-search"></i>
-              <div>
-                Search or start new chat
-              </div>
+            <div class="searchChat d-flex flex-row justify-content-center align-items-center text-secondary">
+              <input type="text"placeholder="Search or start new chat" class="search">
             </div>
 
-            <div class="privatesChat border border-secondary p-2">
-              <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-              <div class="singleChat float-left p-3">
-                <div class="name text-bold">
-                  Damian Lillard
+            <div class="container_Chat">
+              <div class="privatesChat">
+                <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
+                <div class="singleChat float-left p-3">
+                  <div class="name text-bold">
+                    Damian Lillard
+                  </div>
+                  <div class="message text-secondary">
+                    <i class="fas fa-check"></i> You: Tutto apposto, si!
+                  </div>
                 </div>
-                <div class="message text-secondary">
-                  You: Tutto apposto, si!
-                </div>
+                <small class="float-right">11:48</small>
               </div>
-              <small class="float-right p-3">11:48</small>
-            </div>
 
-            <div class="privatesChat border border-secondary p-2">
-              <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-              <div class="singleChat float-left p-3">
-                <div class="name text-bold">
-                  Damian Lillard
+              <div class="privatesChat">
+                <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
+                <div class="singleChat float-left p-3">
+                  <div class="name text-bold">
+                    Damian Lillard
+                  </div>
+                  <div class="message text-secondary">
+                    You: Tutto apposto, si!
+                  </div>
                 </div>
-                <div class="message text-secondary">
-                  You: Tutto apposto, si!
-                </div>
+                <small class="float-right">11:48</small>
               </div>
-              <small class="float-right p-3">11:48</small>
-            </div>
 
-            <div class="privatesChat border border-secondary p-2">
-              <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-              <div class="singleChat float-left p-3">
-                <div class="name text-bold">
-                  Damian Lillard
+              <div class="privatesChat">
+                <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
+                <div class="singleChat float-left p-3">
+                  <div class="name text-bold">
+                    Damian Lillard
+                  </div>
+                  <div class="message text-secondary">
+                    <i class="fas fa-check"></i> You: Tutto apposto, si!
+                  </div>
                 </div>
-                <div class="message text-secondary">
-                  You: Tutto apposto, si!
-                </div>
+                <small class="float-right">11:48</small>
               </div>
-              <small class="float-right p-3">11:48</small>
-            </div>
 
-            <div class="privatesChat border border-secondary p-2">
-              <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-              <div class="singleChat float-left p-3">
-                <div class="name text-bold">
-                  Damian Lillard
+              <div class="privatesChat">
+                <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
+                <div class="singleChat float-left p-3">
+                  <div class="name text-bold">
+                    Damian Lillard
+                  </div>
+                  <div class="message text-secondary">
+                    You: Tutto apposto, si!
+                  </div>
                 </div>
-                <div class="message text-secondary">
-                  You: Tutto apposto, si!
-                </div>
+                <small class="float-right">11:48</small>
               </div>
-              <small class="float-right p-3">11:48</small>
-            </div>
 
-            <div class="privatesChat border border-secondary p-2">
-              <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-              <div class="singleChat float-left p-3">
-                <div class="name text-bold">
-                  Damian Lillard
+              <div class="privatesChat">
+                <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
+                <div class="singleChat float-left p-3">
+                  <div class="name text-bold">
+                    Damian Lillard
+                  </div>
+                  <div class="message text-secondary">
+                    You: Tutto apposto, si!
+                  </div>
                 </div>
-                <div class="message text-secondary">
-                  You: Tutto apposto, si!
-                </div>
+                <small class="float-right">11:48</small>
               </div>
-              <small class="float-right p-3">11:48</small>
-            </div>
 
-            <div class="privatesChat border border-secondary p-2">
-              <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-              <div class="singleChat float-left p-3">
-                <div class="name text-bold">
-                  Damian Lillard
+              <div class="privatesChat">
+                <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
+                <div class="singleChat float-left p-3">
+                  <div class="name text-bold">
+                    Damian Lillard
+                  </div>
+                  <div class="message text-secondary">
+                    You: Tutto apposto, si!
+                  </div>
                 </div>
-                <div class="message text-secondary">
-                  You: Tutto apposto, si!
-                </div>
+                <small class="float-right">11:48</small>
               </div>
-              <small class="float-right p-3">11:48</small>
-            </div>
 
+              <div class="privatesChat">
+                <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
+                <div class="singleChat float-left p-3">
+                  <div class="name text-bold">
+                    Damian Lillard
+                  </div>
+                  <div class="message text-secondary">
+                    You: Tutto apposto, si!
+                  </div>
+                </div>
+                <small class="float-right">11:48</small>
+              </div>
+
+              <div class="privatesChat">
+                <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
+                <div class="singleChat float-left p-3">
+                  <div class="name text-bold">
+                    Damian Lillard
+                  </div>
+                  <div class="message text-secondary">
+                    You: Tutto apposto, si!
+                  </div>
+                </div>
+                <small class="float-right">11:48</small>
+              </div>
+
+              <div class="privatesChat">
+                <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
+                <div class="singleChat float-left p-3">
+                  <div class="name text-bold">
+                    Damian Lillard
+                  </div>
+                  <div class="message text-secondary">
+                    You: Tutto apposto, si!
+                  </div>
+                </div>
+                <small class="float-right">11:48</small>
+              </div>
+
+              <div class="privatesChat">
+                <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
+                <div class="singleChat float-left p-3">
+                  <div class="name text-bold">
+                    Damian Lillard
+                  </div>
+                  <div class="message text-secondary">
+                    You: Tutto apposto, si!
+                  </div>
+                </div>
+                <small class="float-right">11:48</small>
+              </div>
+
+
+            </div>
           </div>
         </div>
 
-        <div class="col-lg-7 d-flex flex-column flex-wrap">
+        <div class="col-lg-8 d-flex flex-column flex-wrap">
 
           <div class="openChat">
-
-            <div class="titleChat border-left border-secondary p-3">
+            <div class="titleChat d-flex align-items-center p-3">
               <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-              <div class="singleChat float-left p-3">
-                <div class="name text-bold">
-                  Damian Lillard
-                </div>
+              <div class="singleChat float-left pl-3">
+                <div class="name text-bold">Damian Lillard</div>
+                <small class="text-secondary">offline</small>
               </div>
-              <div class="chatOptions float-right">
+              <div class="chatOptions ml-auto float-right">
+                <i class="fas fa-search"></i>
                 <i class="fas fa-paperclip"></i>
-                <i class="fas fa-paperclip"></i>
+                <i class="fas fa-ellipsis-v"></i>
               </div>
             </div>
 
-            <div class="containChat">
+            <div class="containChat d-flex flex-column">
               <div class="cpu">
 
               </div>
@@ -137,9 +189,9 @@
             </div>
 
             <div class="userKeyboard d-flex flex-row justify-content-around align-items-center text-secondary">
-              <i class="far fa-smile fa-2x"></i>
+              <i class="far fa-smile"></i>
               <input type="text" name="" value="" class="rounded send" placeholder="Scrivi un messaggio">
-              <i class="fas fa-microphone fa-2x"></i>
+              <i class="fas fa-microphone"></i>
             </div>
 
           </div>
