--- a/index.html
+++ b/index.html
@@ -179,11 +179,8 @@
               </div>
             </div>
 
-            <div class="containChat d-flex flex-column">
-              <div class="cpu">
-
-              </div>
-              <div class="user d-flex flex-column flex-wrap justify-content-start align-items-end">
+            <div class="containChat">
+              <div class="conversation d-flex flex-column">
 
               </div>
             </div>
