Milestone 2 da correggere

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
                 <div class="singleChat float-left p-3">
                   <div class="name text-bold">
-                    Damian Lillard
+                    Kevin Durant
                   </div>
                   <div class="message text-secondary">
                     You: Tutto apposto, si!
@@ -58,7 +58,7 @@
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
                 <div class="singleChat float-left p-3">
                   <div class="name text-bold">
-                    Damian Lillard
+                    Russellone
                   </div>
                   <div class="message text-secondary">
                     <i class="fas fa-check"></i> You: Tutto apposto, si!
@@ -71,7 +71,7 @@
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
                 <div class="singleChat float-left p-3">
                   <div class="name text-bold">
-                    Damian Lillard
+                    Maddix
                   </div>
                   <div class="message text-secondary">
                     You: Tutto apposto, si!
@@ -123,7 +123,7 @@
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
                 <div class="singleChat float-left p-3">
                   <div class="name text-bold">
-                    Damian Lillard
+                    Steph K
                   </div>
                   <div class="message text-secondary">
                     You: Tutto apposto, si!
@@ -170,7 +170,7 @@
               <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
               <div class="singleChat float-left pl-3">
                 <div class="name text-bold">Damian Lillard</div>
-                <small class="text-secondary">offline</small>
+                <small class="text-secondary">online</small>
               </div>
               <div class="chatOptions ml-auto float-right">
                 <i class="fas fa-search"></i>
