--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <header></header>
     <div class="container">
       <div class="row no-gutters bg-white my-4">
         <div class="col-lg-4 d-flex flex-column flex-wrap">
 
-          <div class="myProfile d-flex flex-row justify-content-between align-items-center text-secondary px-2 ">
-            <img src="https://www.nzherald.co.nz/resizer/ylJi7_iqesgCFMK4IU8HFc8XIE0=/360x384/filters:quality(70)/arc-anglerfish-syd-prod-nzme.s3.amazonaws.com/public/2RPYRLYQGFBN3PO4A6UBUUORWQ.jpg" class="rounded float-left rounded-circle">
-            <div class="symbols d-flex flex-row justify-content-end">
+          <div class="myProfile d-flex justify-content-between align-items-center text-secondary px-2 ">
+            <img src="https://www.nzherald.co.nz/resizer/ylJi7_iqesgCFMK4IU8HFc8XIE0=/360x384/filters:quality(70)/arc-anglerfish-syd-prod-nzme.s3.amazonaws.com/public/2RPYRLYQGFBN3PO4A6UBUUORWQ.jpg" class="rounded float-left rounded-circle ml-1">
+            <div class="symbols d-flex justify-content-end">
               <i class="far fa-circle"></i>
               <i class="fas fa-comment-alt"></i>
               <i class="fas fa-ellipsis-v"></i>
@@ -23,14 +23,14 @@
           </div>
 
           <div class="chat d-flex flex-column flex-wrap">
-            <div class="searchChat d-flex flex-row justify-content-center align-items-center text-secondary">
-              <input type="text"placeholder="Search or start new chat" class="search">
+            <div class="searchChat d-flex justify-content-center align-items-center text-secondary">
+              <input type="text" placeholder="Search or start new chat" class="search">
             </div>
 
             <div class="container_Chat">
               <div class="privatesChat">
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-                <div class="singleChat float-left p-3">
+                <div class="singleChat float-left pl-3">
                   <div class="name text-bold">
                     Damian Lillard
                   </div>
@@ -43,7 +43,7 @@
 
               <div class="privatesChat">
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-                <div class="singleChat float-left p-3">
+                <div class="singleChat float-left pl-3">
                   <div class="name text-bold">
                     Kevin Durant
                   </div>
@@ -56,7 +56,7 @@
 
               <div class="privatesChat">
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-                <div class="singleChat float-left p-3">
+                <div class="singleChat float-left pl-3">
                   <div class="name text-bold">
                     Russellone
                   </div>
@@ -69,7 +69,7 @@
 
               <div class="privatesChat">
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-                <div class="singleChat float-left p-3">
+                <div class="singleChat float-left pl-3">
                   <div class="name text-bold">
                     Maddix
                   </div>
@@ -82,7 +82,7 @@
 
               <div class="privatesChat">
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-                <div class="singleChat float-left p-3">
+                <div class="singleChat float-left pl-3">
                   <div class="name text-bold">
                     Damian Lillard
                   </div>
@@ -95,7 +95,7 @@
 
               <div class="privatesChat">
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-                <div class="singleChat float-left p-3">
+                <div class="singleChat float-left pl-3">
                   <div class="name text-bold">
                     Damian Lillard
                   </div>
@@ -108,7 +108,7 @@
 
               <div class="privatesChat">
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-                <div class="singleChat float-left p-3">
+                <div class="singleChat float-left pl-3">
                   <div class="name text-bold">
                     Damian Lillard
                   </div>
@@ -121,7 +121,7 @@
 
               <div class="privatesChat">
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-                <div class="singleChat float-left p-3">
+                <div class="singleChat float-left pl-3">
                   <div class="name text-bold">
                     Steph K
                   </div>
@@ -134,7 +134,7 @@
 
               <div class="privatesChat">
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-                <div class="singleChat float-left p-3">
+                <div class="singleChat float-left pl-3">
                   <div class="name text-bold">
                     Damian Lillard
                   </div>
@@ -147,7 +147,7 @@
 
               <div class="privatesChat">
                 <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
-                <div class="singleChat float-left p-3">
+                <div class="singleChat float-left pl-3">
                   <div class="name text-bold">
                     Damian Lillard
                   </div>
@@ -179,8 +179,8 @@
               </div>
             </div>
 
-            <div class="containChat">
-              <div class="conversation d-flex flex-column">
+            <div class="containChat d-flex justify-content-center align-items-center py-3">
+              <div class="conversation active d-flex flex-column">
 
               </div>
             </div>
