--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="titleChat d-flex align-items-center p-3">
               <img src="https://scontent.cdninstagram.com/vp/118dd38f543246a78d58da1cb62cad6c/5D4DAFF5/t51.2885-15/e35/s480x480/53123411_308771629782383_1211351969503362355_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" class="rounded float-left rounded-circle">
               <div class="singleChat float-left pl-3">
-                <div class="name text-bold">Damian Lillard</div>
+                <div class="namec text-bold">Damian Lillard</div>
                 <small class="text-secondary">online</small>
               </div>
               <div class="chatOptions ml-auto float-right">
@@ -196,15 +196,26 @@
       </div>
     </div>
 
-    <div class="template-message">
+    <div class="template-message d-none">
       <div class="new-message">
         <span class="text-message"></span>
         <div class="info-message">
           <span class="time-message"></span>
           <i class="fas fa-check"></i>
         </div>
+
+        <div class="dropdown-menu">
+          <div class="cancella">
+            Eliminare il messaggio?
+          </div>
+          <div class="opzioni d-flex justify-content-between text-success">
+            <span>Annulla</span>
+            <span>Elimina per me</span>
+          </div>
+        </div>
       </div>
     </div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="script.js" charset="utf-8"></script>
